Name:           mero-halon
Version:        0.1
Stability:      experimental
Synopsis:       Mero interface to HA
Description:    The High Availability system is a library that can be used
                together with deployment-specific components to ensure the
                high availability of a distributed application.
Homepage:       https://github.com/tweag/halon
License:        AllRightsReserved
Copyright:      (C) 2013 Xyratex Technology Limited
Category:       Control
Build-Type:     Simple
Cabal-Version:  >=1.10

source-repository master
  Type:         git
  Location:     git@github.com:tweag/halon.git
  Subdir:       mero-halon/

Flag debug
  Description: Enable tracing output so errors are logged.
  Default: False

Flag distributed-tests
  Description: Enables distributed tests.
  Default: False

Flag distributed-benchmarks
  Description: Enables distributed benchmarks.
  Default: False

Flag rpc
  Description: Build with the RPC backend instead of TCP.
  Default: False

Flag mero
  Description: Build using the real rather than fake Mero.
  Default: False

Flag eventqueue-tests
  Description: Enables distributed tests.
  Default: False

Flag maintainer
  Description: Enforce strict code quality checks (-Werror, etc)
  Default: False

Flag long-tests
  Description: Enable very long tests
  Default: False

Library
  Hs-Source-Dirs:  src/lib
  Default-Language: Haskell2010
  if flag(rpc)
    CPP-Options:    -DUSE_RPC
  if flag(mero)
    CPP-Options:    -DUSE_MERO
  Default-Extensions: BangPatterns
                      DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      NamedFieldPuns
                      RecordWildCards
                      ScopedTypeVariables
                      StandaloneDeriving
                      TupleSections

  Ghc-Options:  -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Exposed-Modules: Mero.FakeEpoch
                   Mero.Messages
                   Mero.RemoteTables
                   HA.Network.Transport
                   HA.Services.DecisionLog
                   HA.Services.Frontier
                   HA.Services.Frontier.Command
                   HA.Services.Frontier.CEP
                   HA.Services.Monitor
                   HA.Services.SSPL
                   HA.Services.SSPL.Rabbit
                   HA.Services.SSPL.CEP
                   HA.Services.SSPLHL
                   HA.Services.SSPL.LL.Resources
                   HA.Services.SSPL.IEM
                   HA.Stats
                   HA.RecoveryCoordinator.Mero
                   HA.RecoveryCoordinator.CEP
                   HA.RecoveryCoordinator.Definitions
                   HA.RecoveryCoordinator.Events.Status
                   HA.RecoveryCoordinator.Actions.Core
                   HA.RecoveryCoordinator.Actions.Storage
                   HA.RecoveryCoordinator.Actions.Hardware
                   HA.RecoveryCoordinator.Actions.Service
                   HA.RecoveryCoordinator.Actions.Test
                   HA.RecoveryCoordinator.Rules.Castor
                   HA.RecoveryCoordinator.Rules.Service
                   HA.RecoveryCoordinator.Events.Drive
                   HA.RecoveryCoordinator.Events.Mero
                   HA.Resources.Castor
                   HA.Resources.Castor.Initial

  Other-Modules:   HA.RecoveryCoordinator.Actions.Monitor
                   HA.Services.DecisionLog.CEP
                   HA.Services.DecisionLog.Types
                   HA.Services.Monitor.CEP
                   HA.Services.Monitor.Types
                   HA.Services.SSPL.HL.Resources
                   HA.Services.SSPL.HL.StatusHandler
                   HA.Services.SSPL.HL.CEP

  Build-Depends:   base,
                   aeson,
                   amqp,
                   halon,
                   bytestring,
                   containers,
                   directory,
                   distributed-process-scheduler,
                   distributed-static,
                   hashable,
                   exceptions,
                   mtl,
                   options-schema,
                   process,
                   regex-tdfa,
                   scientific,
                   sspl,
                   text,
                   time,
                   binary,
                   network >= 2.4,
                   network-transport,
                   replicated-log,
                   unordered-containers,
                   cep,
                   netwire,
                   uuid,
                   random,
                   yaml,
                   hostname,
                   multimap,
                   wl-pprint,
                   transformers,
                   filepath,
                   ede

  if flag(mero)
      Exposed-Modules: Mero.Epoch
                       Mero.Environment
                       Mero.M0Worker
                       Mero.Notification
                       Mero.Notification.HAState
                       HA.RecoveryCoordinator.Actions.Mero
                       HA.RecoveryCoordinator.Rules.Castor.Server
                       HA.RecoveryCoordinator.Rules.Castor.Reset
                       HA.RecoveryCoordinator.Rules.Mero
                       HA.Resources.Mero
                       HA.Resources.Mero.Note
                       HA.Services.Mero
                       HA.RecoveryCoordinator.Actions.Mero.Failure
                       HA.RecoveryCoordinator.Actions.Mero.Failure.Simple
                       HA.RecoveryCoordinator.Actions.Mero.Failure.Dynamic
                       HA.RecoveryCoordinator.Actions.Mero.Failure.Internal
                       HA.RecoveryCoordinator.Rules.Mero.Conf
                       HA.RecoveryCoordinator.Events.Castor.Cluster
      Other-Modules:  HA.RecoveryCoordinator.Actions.Mero.Conf
                      HA.RecoveryCoordinator.Actions.Mero.Core
                      HA.RecoveryCoordinator.Actions.Mero.Spiel
                      HA.RecoveryCoordinator.Rules.Castor.Repair
                      HA.RecoveryCoordinator.Rules.Castor.Cluster
                      HA.RecoveryCoordinator.Rules.Castor.Repair.Internal
                      HA.Services.Mero.CEP
                      HA.Services.Mero.Types
                      System.Posix.SysInfo
      cc-options: -Wno-attributes -Werror -g -DM0_INTERNAL= -DM0_EXTERN=extern
      c-sources: hastate/hastate.c
                 hastate/hastate_foms.c
      include-dirs: hastate
      extra-libraries: mero
      Build-Depends: rpclite,
                     confc,
                     inline-c,
                     transformers,
                     vector
  if flag(rpc)
      Build-Depends: rpclite,
                     network-transport-rpc
  else
      Build-Depends: network >= 2.4,
                     network-transport-tcp >= 0.3

Executable halonctl
  Hs-Source-Dirs:     src/halonctl
  Main-Is:            Main.hs
  Other-Modules:      Flags
                      Handler.Bootstrap
                      Handler.Bootstrap.Satellite
                      Handler.Bootstrap.TrackingStation
                      Handler.Cluster
                      Handler.Service
                      Handler.Status
                      Lookup
                      Options.Applicative.Extras

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror


  if flag(debug)
    ghc-options:      -eventlog -debug -with-rtsopts=-l-au
  default-language:   Haskell2010
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      DisambiguateRecordFields
                      OverloadedStrings
                      ScopedTypeVariables
                      TupleSections
                      StandaloneDeriving
  Other-Extensions:   CPP
  if flag(mero)
    CPP-Options:    -DUSE_MERO
  if flag(rpc)
      CPP-Options:    -DUSE_RPC
  Build-Depends:      halon,
                      mero-halon,
                      aeson,
                      base >= 4.5,
                      binary,
                      bytestring,
                      distributed-process-scheduler,
                      distributed-static,
                      filepath >= 1.3,
                      hashable,
                      network-transport >= 0.3,
                      options-schema >= 0.2,
                      optparse-applicative >= 0.11,
                      process,
                      yaml,
                      mtl
  if flag(rpc)
      Build-Depends: network-transport-rpc >= 0.0.1
  else
      Build-Depends: network >= 2.4,
                     network-transport-tcp >= 0.3

Executable haloninfo
  Hs-Source-Dirs:     src/haloninfo
  Main-Is:            Main.hs
  default-language:   Haskell2010
  Ghc-Options: -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(mero)
    CPP-Options:    -DUSE_MERO
  if flag(rpc)
      CPP-Options:    -DUSE_RPC
  Build-Depends:      mero-halon,
                      base >= 4.5,
                      optparse-applicative >= 0.11

Executable halond
  Hs-Source-Dirs:     src/halond
  Main-Is:            Main.hs
  Other-Modules:      Flags

  -- Reduce the context-switch interval to improve sharing
  -- of the CPU when there are CPU-intensive computations
  -- in the RC.
  Ghc-Options: -threaded -Wall -with-rtsopts=-C0

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(debug)
    ghc-options:      -eventlog -debug -with-rtsopts=-l-au -rtsopts
  default-language:   Haskell2010
  Default-Extensions: DeriveDataTypeable
                      DisambiguateRecordFields
                      OverloadedStrings
                      ScopedTypeVariables
                      TupleSections
                      StandaloneDeriving
  Other-Extensions:   CPP
  if flag(mero)
    CPP-Options:    -DUSE_MERO
  if flag(rpc)
      CPP-Options:    -DUSE_RPC
  Build-Depends:      halon,
                      binary,
                      mero-halon,
                      base >= 4.5,
                      distributed-commands,
                      distributed-process-scheduler,
                      distributed-static,
                      filepath >= 1.3,
                      network-transport >= 0.3,
                      options-schema
  if flag(mero)
      Build-Depends: rpclite
  if flag(rpc)
      Build-Depends: network-transport-rpc >= 0.0.1
  else
      Build-Depends: network >= 2.4,
                     network-transport-tcp >= 0.3.1

Executable genders2yaml
  Hs-Source-Dirs:     src/genders2yaml
  Main-Is:            Main.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
   Ghc-Options: -Werror

  if flag(debug)
   ghc-options:     -eventlog -debug -with-rtsopts=-l-au -rtsopts
  default-language:  Haskell2010
  if !flag(mero)
    Buildable:        False
  else
    Build-Depends:    aeson,
                      base >= 4.8,
                      binary,
                      bytestring,
                      confc,
                      directory >= 1.2.5,
                      filepath,
                      genders,
                      mero-halon,
                      unordered-containers,
                      vector,
                      yaml



Test-Suite distributed-tests
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests
  Main-Is:         distributed-tests.hs

  Ghc-Options: -threaded -Wall

  Other-Modules:
      HA.Test.Distributed.Autoboot
      HA.Test.Distributed.ClusterDeath
      HA.Test.Distributed.ConfigureServices
      HA.Test.Distributed.NodeDeath
      HA.Test.Distributed.RCInsists
      HA.Test.Distributed.RCInsists2
      HA.Test.Distributed.Snapshot3
      HA.Test.Distributed.StartService
      HA.Test.Distributed.TSDisconnects
      HA.Test.Distributed.TSDisconnects2
      HA.Test.Distributed.TSRecovers
      HA.Test.Distributed.TSRecovers2
      HA.Test.Distributed.TSTotalIsolation
      HA.Test.Distributed.TSTotalIsolation2

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   distributed-process-test,
                   filepath,
                   halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process,
                   tasty,
                   tasty-files,
                   tasty-hunit
  if !flag(distributed-tests)
    Buildable:     False

Test-Suite testsnapshot2
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         snapshots2.hs

  Ghc-Options:     -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   process
  if !(flag(distributed-tests) && flag(long-tests))
    Buildable:     False


Test-Suite testepoch
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests
  Main-Is:         testepoch.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

--  if flag(rpc) && flag(mero)
--    Build-Depends:   halon,
--                     mero-halon,
--                     base >= 4.5,
--                     directory,
--                     filepath,
--                     process >= 1.1,
--                     process >= 1.1,
--                     binary >= 0.6.4,
--                     network-transport-rpc,
--                     time >= 1.4
--  else
  buildable: False

Test-Suite testhastate
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests
  Main-Is:         testhastate.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(mero)
    Build-Depends:   halon,
                     confc,
                     mero-halon,
                     base >= 4.5,
                     process >= 1.1,
                     binary >= 0.6.4,
                     bytestring,
                     directory,
                     filepath,
                     network,
                     rpclite,
                     time >= 1.4,
                     unix,
                     distributed-process-test
  else
    buildable: False

Test-Suite testeventqueue
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         EventQueue.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process,
                   transformers,
                   halon,
                   bytestring,
                   network,
                   mtl
  if !flag(eventqueue-tests)
    Buildable:     False

-- XXX: Tests are not build under ghc >= 7.8 because currently
-- they fails, these workarounds should be removed as soon as
-- tests will pass

Test-Suite unit-tests
  Type:             exitcode-stdio-1.0
  Main-Is:          test.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    HA.RecoveryCoordinator.SSPL.Tests
                    HA.Autoboot.Tests
                    HA.Castor.Story.Tests
                    HA.Castor.Tests
                    HA.Test.Cluster
                    HA.Test.Disconnect
                    HA.Test.SSPL
                    Helper.SSPL
                    Helper.Environment
                    Helper.InitialData
                    Helper.RC
                    RemoteTables
                    TestRunner
                    HA.RecoveryCoordinator.Helpers
                    HA.RecoveryCoordinator.Tests

  Ghc-Options: -threaded -Wall -rtsopts -with-rtsopts=-T

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(mero)
    CPP-Options:    -DUSE_MERO
    Build-Depends:  confc

  CPP-Options:      -DMC_RG=RLocalGroup -DUSE_MOCK_REPLICATOR
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    base >= 4.5,
                    binary >= 0.6.4,
                    aeson,
                    bytestring,
                    directory,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    cep,
                    attoparsec,
                    containers,
                    directory,
                    filepath,
                    process,
                    amqp,
                    text,
                    aeson,
                    uuid,
                    time,
                    unix,
                    process

  if flag(mero)
      Build-Depends: rpclite, syb
      CPP-Options:    -DUSE_MERO

  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3

Test-Suite integration-tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    HA.RecoveryCoordinator.Helpers
                    HA.RecoveryCoordinator.Tests
                    HA.Autoboot.Tests
                    HA.Castor.Tests
                    HA.Castor.Story.Tests
                    HA.Test.Cluster
                    HA.Test.Disconnect
                    HA.Test.SSPL
                    Helper.SSPL
                    RemoteTables
                    TestRunner
                    HA.Castor.Story.Tests
                    Helper.SSPL
                    Helper.Environment
                    Helper.InitialData
                    Helper.RC

  Main-Is:          test.hs

  Ghc-Options: -threaded -Wall -rtsopts -with-rtsopts=-T

  if flag(maintainer)
    Ghc-Options: -Werror

  CPP-Options:      -DMC_RG=RLogGroup
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    aeson,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    directory,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    cep,
                    attoparsec,
                    containers,
                    directory,
                    filepath,
                    process,
                    amqp,
                    text,
                    aeson,
                    uuid,
                    time,
                    text,
                    unix,
                    process
  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3

  if flag(mero)
      Build-Depends:  confc,
                      rpclite,
                      syb
      CPP-Options:    -DUSE_MERO

Test-Suite scheduler-tests
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    HA.Autoboot.Tests
                    HA.Castor.Tests
                    HA.Test.Disconnect
                    Helper.SSPL
                    Helper.Environment
                    Helper.InitialData
                    Helper.RC
                    RemoteTables
                    TestRunner
                    HA.RecoveryCoordinator.Helpers
                    HA.RecoveryCoordinator.Tests
  Main-Is:          scheduler-tests.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  CPP-Options:      -DMC_RG=RLogGroup
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  Build-Depends:    halon,
                    mero-halon,
                    aeson,
                    base >= 4.5,
                    binary >= 0.6.4,
                    bytestring,
                    directory,
                    distributed-process-scheduler,
                    distributed-process-test,
                    distributed-static,
                    mtl,
                    network,
                    network-transport,
                    network-transport-controlled,
                    network-transport-inmemory,
                    options-schema,
                    hashable,
                    unordered-containers,
                    random,
                    sspl,
                    tasty,
                    tasty-hunit,
                    tasty-files,
                    unix,
                    cep,
                    attoparsec,
                    containers,
                    time,
                    text,
                    process

  if flag(mero)
    CPP-Options:    -DUSE_MERO
    Build-Depends:  confc,
                    rpclite

Test-Suite test-start-service-local
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Distributed
  Main-Is:         startService-local.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   directory,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process,
                   unix,
                   halon,
                   mero-halon
  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC

benchmark halonpings
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  benchmarks
  Main-Is:         halonpings.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  if flag(distributed-benchmarks)
    Build-Depends: distributed-process,
                   base,
                   clock,
                   filepath,
                   halon,
                   mero-halon,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands
  else
    Buildable:     False

Benchmark initial-data-gc
  Type:             exitcode-stdio-1.0
  Main-Is:          initial-data-gc.hs
  Default-Language: Haskell2010
  Hs-Source-Dirs:   benchmarks, tests
  Other-Modules:    HA.Castor.Tests,
                    Helper.Environment,
                    Helper.InitialData,
                    Helper.RC,
                    RemoteTables,
                    TestRunner



  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  CPP-Options:      -DMC_RG=RLocalGroup -DUSE_MOCK_REPLICATOR
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au
  Default-Extensions: DeriveDataTypeable
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
                      RecordWildCards NamedFieldPuns
                      ScopedTypeVariables
  if flag(mero)
    Build-Depends:  halon,
                    mero-halon,
                    base >= 4.5,
                    Cabal >= 1.16,
                    binary >= 0.6.4,
                    bytestring,
                    cep,
                    confc,
                    containers,
                    criterion,
                    deepseq,
                    directory,
                    distributed-process-scheduler,
                    distributed-process-test,
                    filepath,
                    hashable,
                    network,
                    network-transport,
                    network-transport-inmemory,
                    options-schema >= 0.1.1.0,
                    process,
                    random,
                    rpclite,
                    tasty-hunit,
                    unix,
                    unordered-containers
    CPP-Options:   -DUSE_MERO
  else
    Buildable:     False

Test-Suite tests-mero-integration
  Type:             exitcode-stdio-1.0
  Default-Language: Haskell2010
  Hs-Source-Dirs:   tests
  Main-Is:          tests-mero-integration.hs
  Other-Modules:    HA.RecoveryCoordinator.Mero.Tests
                    HA.RecoveryCoordinator.Helpers
                    HA.Castor.Story.Repair
                    HA.Castor.Story.Tests
                    HA.Castor.Tests
                    Helper.Environment
                    Helper.SSPL
                    Helper.InitialData
                    Helper.RC
                    TestRunner
                    RemoteTables

  Ghc-Options:      -threaded -Wall -rtsopts -with-rtsopts=-C0
  CPP-Options:      -DMC_RG=RLogGroup
  Other-extensions:   RankNTypes
                      RecordWildCards
                      CPP
                      TemplateHaskell
                      ScopedTypeVariables
                      RecursiveDo
                      LambdaCase
                      TupleSections
                      OverloadedStrings
                      DeriveGeneric
                      GeneralizedNewtypeDeriving
  if flag(debug)
    Ghc-Options:    -eventlog -debug -with-rtsopts=-l-au

  if flag(mero)
      Build-Depends:    base >= 4.5,
                        halon,
                        mero-halon,
                        distributed-process-scheduler,
                        distributed-process-test,
                        network-transport,
                        network-transport-inmemory,
                        aeson,
                        cep,
                        confc,
                        rpclite,
                        sspl,
                        aeson,
                        amqp,
                        binary,
                        bytestring,
                        containers,
                        hashable,
                        options-schema,
                        process,
                        random,
                        network,
                        syb,
                        text,
                        tasty,
                        tasty-files,
                        tasty-hunit,
                        unix,
                        directory,
                        unordered-containers,
                        uuid

      CPP-Options:    -DUSE_MERO
  else
      Buildable:        False

  if flag(rpc)
      Build-Depends: network-transport-rpc
      CPP-Options:    -DUSE_RPC
  else
      Build-Depends: network-transport-tcp >= 0.3

Test-Suite test-server-bootstrap-local
  Type:             exitcode-stdio-1.0
  default-language: Haskell2010
  Hs-Source-Dirs:  tests/Bootstrap
  Main-Is:         Server.hs

  Ghc-Options: -threaded -Wall

  if flag(maintainer)
    Ghc-Options: -Werror

  Build-Depends:   distributed-process,
                   base,
                   filepath,
                   directory,
                   network-transport,
                   network-transport-tcp,
                   distributed-commands,
                   distributed-process-test,
                   process,
                   unix,
                   halon,
                   mero-halon,
                   hostname
  -- bitrotten: disabled for now
  Buildable:     False
